<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gooble Logic</string>

    <!-- Main screen -->
    <string name="new_puzzle">New Puzzle</string>
    <string name="view_puzzles">View Puzzles</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="delete">Delete</string>

    <!-- Edit puzzle screen -->
    <string name="edit_or_new_puzzle">Puzzle</string>
    <string name="variables">Variables</string>
    <string name="relations">Relations</string>
    <string name="hints">Hints</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!-- Hints screen -->
    <string name="save_hints">Save</string>
    <string name="add_hint">Add Hint</string>
    
    <!-- Variables screen -->
    <string name="add_variable">Add New Variable</string>
    <string name="variable_name">Name:</string>
    <string name="add_variable_values">Add Values</string>
    <string name="save_variables">Save</string>

    <!-- Variable values screen -->
    <string name="variable_values">Variable Values</string>
    <string name="variable_value">Value:</string>
    <string name="add_variable_value">Add Value</string>
    <string name="main_variable">Is main variable</string>

    <!-- Relations screen -->
    <string name="add_relation">Add New Relation</string>
    <string name="relation_name">Name:</string>
    <string name="save_relations">Save</string>
    <string name="edit_relation">Edit Relation</string>

    <!-- Edit Relation screen -->
    <string name="relation_variable">Variable:</string>
    <string name="add_condition_set">Add Condition Set</string>
    <string name="save_relation">Save Relation</string>
    
    <!-- Condition Set screen -->
    <string name="condition_set">Condition Set</string>
    <string name="add_condition">Add Condition</string>
    <string name="and_condition">AND</string>
    
    <!-- Edit Hint screen -->
    <string name="edit_hint">Edit Hint</string>
    <string name="short_name">Short Name:</string>
    <string name="description">Description:</string>
    <string name="hint_variables">Variables:</string>
    <string name="property_links">Property Links</string>
    
    <!-- Property links screen -->
    <string name="add_property_link">Add Property Link</string>

</resources>