<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_hint_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/hint_short_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10" 
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hint_short_name"
        android:text="@string/description" />

    <EditText
        android:id="@+id/hint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hint_short_name"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/description_label"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/edit_variables_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hint_description"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/property_links_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_variables_button"
        android:text="@string/property_links" />

    <Button
        android:id="@+id/edit_property_links_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/property_links_label"
        android:text="@string/edit" />

    <Button
        android:id="@+id/edit_relations_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_property_links_button"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/variables_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/edit_variables_button"
        android:text="@string/variables" />

    <TextView
        android:id="@+id/relations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_property_links_button"
        android:text="@string/relations" />

    <TextView
        android:id="@+id/short_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/short_name" />

    <Button
        android:id="@+id/save_hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_relations_button"
        android:text="@string/save" />

</RelativeLayout>