<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_relation_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <Spinner
        android:id="@+id/relation_variable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/relation_variable_label" />

    <Button
        android:id="@+id/add_condition_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relation_variable_list"
        android:text="@string/add_condition_set" />

    <TextView
        android:id="@+id/relation_variable_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/relation_variable_list"
        android:layout_alignBottom="@id/relation_variable_list"
        android:layout_alignParentLeft="true"
        android:text="@string/relation_variable" />

    <Button
        android:id="@+id/save_relation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relation_variable_list"
        android:text="@string/save_relation" />

</RelativeLayout>